# fmf2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
fmf2/: CMakeLists.txt  __init__.py  _fmf2.pyx
fmf2/include/: fmf2.hpp
fmf2/src/: serial.cpp  sycl.cpp
tests/: test_fmf2.py  test_geonet.py  test_mohn_cluster.py
tests/data/: geonet.npz
